Resolve error message bug; resolve menu z-index bug

--- a/public/src/scss/modules/_form.scss
+++ b/public/src/scss/modules/_form.scss
@@ -45,6 +45,7 @@
   position: absolute;
   top: 37px;
   left: 0;
+  z-index: 1;
   overflow: hidden;
   width: 100%;
   max-height: 0;
@@ -55,10 +56,6 @@
   .open & {
     max-height: 500px;
     border-bottom: 4px solid #ffa500;
-  }
-
-  .pathfinder__form-select:first-child & {
-    z-index: 1;
   }
 
   li {
@@ -153,17 +150,14 @@
   }
 }
 
-.pathfinder__result {
+.pathfinder__result,
+.pathfinder__error-message {
+  @extend .col-10;
+
   display: none;
   margin-top: 20px;
-
-  &--show {
-    display: block;
-  }
-}
-
-.pathfinder__error-message {
-  display: none;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.4);
 
   &--show {
     display: block;
